frontend/tests/cases/positive/levelApprox.gr
castLevel : ∀ {a : Type} . a [Public] → a [Private]
castLevel [x] = [x]

ok : Int [Private] -> Int
ok [x] = x

approxOk : Int [Public] -> Int
approxOk = ok